force-app/main/default/objects/Stock__c/Stock__c.object-meta.xml
<CustomObject>
    <label>Stock</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Stock Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stocks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>