force-app/main/default/objects/Stock__c/fields/Party__c.field-meta.xml
<CustomField>
    <fullName>Party__c</fullName>
    <label>Party</label>
    <referenceTo>Party__c</referenceTo>
    <relationshipLabel>Stocks</relationshipLabel>
    <relationshipName>Stocks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>