force-app/main/default/objects/Stock__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <label>Size</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PP,</fullName>
            </value>
            <value>
                <fullName>P,</fullName>
            </value>
            <value>
                <fullName>M,</fullName>
            </value>
            <value>
                <fullName>G</fullName>
            </value>
            <value>
                <fullName>GG,</fullName>
            </value>
            <value>
                <fullName>GGG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>